# arcam_fmj

./: .gitignore  README.rst  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: python-package.yml  python-publish.yml
docs/: code-review-guidelines.md  protocol-reference.md
src/arcam/fmj/: __init__.py  client.py  console.py  dataclasses.py  discovery.py  display.py  dummy.py  enums.py  exceptions.py  packets.py  server.py  state.py  utils.py
tests/: conftest.py  test_client.py  test_console.py  test_display.py  test_dummy.py  test_fake.py  test_init.py  test_protocol.py  test_server.py  test_source.py  test_state.py  test_utils.py
