[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "arcam-fmj"
version = "2.2.0"
description = "A python library for speaking to Arcam receivers"
readme = "README.rst"
authors = [
    {name = "Joakim Plate"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Plugins",
    "Framework :: AsyncIO",
]
requires-python = ">=3.11"
dependencies = [
    "attrs>=22.1",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/elupus/arcam_fmj"

[project.optional-dependencies]
discovery = [
    "aiohttp>=3.8",
    "defusedxml>=0.7.1",
]
tests = [
    "arcam-fmj[discovery]",
    "pytest>=8.0",
    "pytest-aiohttp>=1.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.10",
]

[project.scripts]
arcam-fmj = "arcam.fmj.console:main"

[tool.isort]
not_skip = "__init__.py"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
